[package]
name = "break-block-macro"
version = "0.1.0"
edition = "2021"
authors = ["Luke Peterson <luketpeterson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A little syntactic sugar to tide us over until the `?` operator can be used to exit try-catch scopes"
repository = "https://github.com/luketpeterson/break-block-macro/"
readme = "README.md"
keywords = ["option", "result", "try", "catch", "errors"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
someok = "0.1.0"
